gccida/g1/push_reload
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1333:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a5, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1334:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1335:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1339:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1345:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v16; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1386:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class valid_class; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1391:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v62; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1392:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v63; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v66; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v67; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1418:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v89; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1439:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v110; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1440:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v111; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1445:4: error: expected ';' after expression
rtx v116; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1445:5: error: use of undeclared identifier 'v116'
rtx v116; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1448:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v119; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1495:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode secondary_out_icode; // [rsp+0h] [rbp-98h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1498:4: error: expected ';' after expression
rtx ina; // [rsp+8h] [rbp-90h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1498:5: error: use of undeclared identifier 'ina'; did you mean 'in'?
rtx ina; // [rsp+8h] [rbp-90h] 
    ^~~
    in
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/reload.c:1329:5: note: 'in' declared here
rtx in, 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_reload/src/obj/reload.o] Error 1
